# rusty_timer

./: Cargo.toml  Readme.md  license
src/: command_line.rs  main.rs
